--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ main {
 .counter-container {
     display: flex; /* Enables Flexbox for the container */
     gap: 5px; /* Adds spacing between the spans */
-    align-items: center; /* Vertically aligns the spans */
+    align-items: center; /*Vertically aligns the spans*/
+    
 }
 
 .increment, .decrement {
@@ -22,6 +23,8 @@ main {
     font-size: 16px;
     border-radius: 5px; /* Optional: Rounded corners */
     cursor: pointer; /* Pointer cursor for interactivity */
+    text-shadow: none;
+    box-shadow: none;
 }
 
 .counter-value {
